# tardigrade-vector-tools

./: .gitignore  .gitlab-ci.yml  BUILD.sh  CD.sh  CMakeLists.txt  INSTALL.sh  README.md  README.rst  ReadMe  activate_w13pythonenv.sh  build_docs.sh  build_test.sh  config.mk  config.xml  environment.txt  environment.yaml  jenkins_build.sh  jenkins_deploy.sh  new_build.sh  requirements.txt  set_vars.sh  update_dependencies.sh
configuration_files/: config.xml.multiagent_deploy_yellow.vector_tools  config.xml.multiagent_pr_builder.vector_tools  environment.yml
docs/: CMakeLists.txt  Doxyfile.in  api.rst  conf.py  conf.py.in  index.rst  vector_tools.rst
modulefiles/: vector_tools-env
recipe/: conda_build_config.yaml  meta.yaml
src/cpp/: CMakeLists.txt  config.h.in  tardigrade_vector_tools.h  vector_tools.cpp  vector_tools.h  vector_tools.h.in
src/cpp/test/vector_tools/: makefile  test_vector_tools.cpp
src/cpp/tests/: CMakeLists.txt  test_tardigrade_vector_tools.cpp  test_vector_tools.cpp
src/cpp/tests/vector_tools/: .gitignore  CMakeLists.txt  execute_tests.sh  test_vector_tools.cpp
