add_library(${PROJECT_NAME} INTERFACE)
target_include_directories(${PROJECT_NAME} INTERFACE
                           INTERFACE $<BUILD_INTERFACE:${PROJECT_BINARY_DIR}${CPP_SRC_PATH}>
                                     $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>)
target_compile_features(${PROJECT_NAME} INTERFACE CXX_STD_11)
install(TARGETS ${PROJECT_NAME}
        PUBLIC_HEADER)
install(FILES "${PROJECT_NAME}.h" DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
